# lime-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang_modules.cmake  msvc_modules.cmake
assets/: monkey.glb
assets/shaders/: default.frag.spv  default.vert.spv  lighting.frag.spv  lighting.vert.spv  skinning.vert.spv
shaders/: default.frag  default.vert  lighting.frag  skinning.vert
shaders/base/: fragment.glsl  vertex.glsl
src/: app.ixx  main.cpp  utils.ixx
src/core/: Game.ixx
src/graphics/: MaterialBuilder.ixx  Mesh.ixx  PipelineBuilder.ixx  Render.ixx  SceneManager.ixx  Uploader.ixx  mesh.ixx  vulkan_types.ixx
src/sys/: Window.ixx
